# apple_navidrome

./: Cargo.toml  an_config.toml  readme.md
src/: cli.rs  config.rs  lib.rs  main.rs
src/navidrome_writer/: mod.rs
src/structs/: mod.rs  playlist.rs  track.rs
src/xml_reader/: mod.rs  playlists.rs  tracks.rs
