[package]
name = "apple_navidrome"
version = "0.1.0"
edition = "2021"

[lib]
name = "apple_navidrome_lib"
path = "src/lib.rs"

[[bin]]
name = "apple_navidrome_cli"
path = "src/cli.rs"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
rusqlite = { version = "0.32.0", features = ["bundled", "modern_sqlite"] }
serde = { version = "1.0.216" , features = ["derive"] }
serde_json = "1.0.133"
urlencoding = "2.1.3"
xml = "0.8.20"
