[package]
name = "apple_navidrome"
version = "0.1.0"
edition = "2021"

[lib]
name = "apple_navidrome_lib"
path = "src/lib.rs"

[[bin]]
name = "apple_navidrome"
path = "src/cli.rs"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
colog = "1.3.0"
log = "0.4.22"
rusqlite = { version = "0.32.0", features = ["bundled", "modern_sqlite", "chrono"] }
serde = { version = "1.0.216" , features = ["derive"] }
serde_json = "1.0.133"
toml = "0.8.19"
urlencoding = "2.1.3"
xml = "0.8.20"
